--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
             "@vue/airbnb"
         ],
         "rules": {
-            "import/no-extraneous-dependencies": 0
+            "import/no-extraneous-dependencies": 0,
+            "consistent-return": 0,
+            "no-plusplus": 0,
+            "guard-for-in": 0,
+            "no-restricted-syntax": 0
         },
         "parserOptions": {
             "parser": "babel-eslint"
