--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
             "consistent-return": 0,
             "no-plusplus": 0,
             "guard-for-in": 0,
-            "no-restricted-syntax": 0
+            "no-restricted-syntax": 0,
+            "import/extensions": 0,
+            "import/no-unresolved": 0
         },
         "parserOptions": {
             "parser": "babel-eslint"
