--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 node_modules
-dist
-!dist/*.html
+
+dist/
 
 # local env files
 .env.local
@@ -20,3 +20,5 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
+
+!dist/index.html
