--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vue-core-image-upload": "^2.4.11",
     "vue-drag-resize": "^1.3.2",
     "vue-template-compiler": "^2.5.17",
-    "vuedraggable": "^2.16.0"
+    "vuedraggable": "^2.16.0",
+    "webpack-merge": "^4.1.4"
   },
   "eslintConfig": {
     "root": true,
