--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clipboard": "^2.0.1",
     "element-ui": "^2.4.6",
     "lodash": "^4.17.10",
+    "meetyou.jssdk": "^1.0.9",
     "qrcodejs2": "0.0.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
