--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-drag-resize": "^1.3.2",
     "vue-template-compiler": "^2.5.17",
     "vuedraggable": "^2.16.0",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-merge": "^4.1.4"
   },
   "eslintConfig": {
