--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ rsync_test:
   script:
     - "rm /data/git/beta/$PROJECT_NAME/ -Rf"
     - "/opt/gitlab/embedded/bin/git archive --format=tar --prefix=$PROJECT_NAME/ HEAD | (cd /data/git/beta/ && tar xf -)"
-    - "scp -r /data/git/beta/$PROJECT_NAME/dist/index.html root@10.0.1.174:/opt/apps/test/bfe/views/we.html"
+    - "scp -r /data/git/beta/$PROJECT_NAME/dist/*.html root@10.0.1.174:/opt/apps/test/bfe/views/"
     - ssh root@10.0.1.174 "cd /opt/apps/test/bfe/; pm2 reload process.json --only bfe-test"
   only:
     - release
