--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "clipboard": "^2.0.1",
     "element-ui": "^2.4.6",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "meetyou.jssdk": "^1.0.9",
     "qrcodejs2": "0.0.2",
