--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "element-ui": "^2.4.6",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "meetyou.jssdk": "^1.0.9",
+    "nanoid": "^1.2.3",
     "qrcodejs2": "0.0.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
