--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clipboard": "^2.0.1",
     "element-ui": "^2.4.6",
     "jquery": "^3.3.1",
+    "jsonp": "^0.2.1",
     "lodash": "^4.17.10",
     "meetyou.jssdk": "^1.0.9",
     "nanoid": "^1.2.3",
