--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nanoid": "^1.2.3",
     "qrcodejs2": "0.0.2",
     "vue": "^2.5.17",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
