--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,7 @@ rsync_master:
   script:
     - "mkdir -p /data/git/release/$PROJECT_NAME/"
     - "/opt/gitlab/embedded/bin/git archive --format=tar --prefix=$PROJECT_NAME/ HEAD | (cd /data/git/release/ && tar xf -)"
+    - 'scp -r /data/git/beta/$PROJECT_NAME/dist/*.html root@10.0.1.174:/opt/apps/master/bfe/views/'
+    - ssh root@10.0.1.174 "cd /opt/apps/master/bfe/; pm2 reload process.json --only bfe-master"
   only:
     - master
