--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "lint-staged": "^7.2.0",
+    "meetyou.browser": "^1.0.3",
     "meetyou.jssdk": "^1.0.9",
     "meetyou.sharebar": "^1.2.6",
     "meetyou.util": "^1.0.4",
