--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ali-oss": "^6.0.1",
     "axios": "^0.18.0",
     "js-md5": "^0.7.3",
+    "json": "^9.0.6",
     "jsonp": "^0.2.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
