--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "lint-staged": "^7.2.0",
+    "loadsh": "0.0.3",
     "meetyou.browser": "^1.0.3",
     "meetyou.jssdk": "^1.0.9",
     "meetyou.sharebar": "^1.2.6",
