--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vue/cli-service": "^3.0.0",
     "@vue/eslint-config-airbnb": "^3.0.0",
     "ali-oss": "^6.0.1",
+    "archiver": "^3.0.0",
     "axios": "^0.18.0",
     "js-md5": "^0.7.3",
     "json": "^9.0.6",
